[gd_scene load_steps=5 format=3 uid="uid://go5ni3ojg2t0"]

[ext_resource type="Script" uid="uid://2c248i1d5v6g" path="res://src/scripts/menu_principal.gd" id="1_fu6qi"]
[ext_resource type="Texture2D" uid="uid://dbkydp6oonfcv" path="res://src/Assets/MenuPrinc.png" id="2_b3ngh"]
[ext_resource type="FontFile" uid="uid://bm6askaju3ctu" path="res://src/Assets/Fonts/main_font.ttf" id="3_hekm7"]
[ext_resource type="AudioStream" uid="uid://c77iaxxii7bfw" path="res://src/Assets/Sounds/Sonidos/Menu.mp3" id="4_w8fun"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu6qi")

[node name="MenuPrinc" type="Sprite2D" parent="."]
position = Vector2(180, 120)
scale = Vector2(0.351563, 0.234375)
texture = ExtResource("2_b3ngh")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 85.0
offset_top = 104.0
offset_right = 444.0
offset_bottom = 255.0
scale = Vector2(0.530945, 0.748805)

[node name="Juagr" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 45.2024
offset_top = 2.67091
offset_right = 117.202
offset_bottom = 27.6709
scale = Vector2(3.76664, 1.42088)
theme_override_fonts/font = ExtResource("3_hekm7")

[node name="salir" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 45.2024
offset_top = 108.172
offset_right = 117.202
offset_bottom = 133.172
scale = Vector2(3.76664, 1.42088)
theme_override_fonts/font = ExtResource("3_hekm7")

[node name="ajustes" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 45.2024
offset_top = 53.4185
offset_right = 117.202
offset_bottom = 78.4185
scale = Vector2(3.76664, 1.42088)
theme_override_fonts/font = ExtResource("3_hekm7")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w8fun")
autoplay = true

[connection signal="pressed" from="Panel/Juagr" to="." method="_on_juagr_pressed"]
[connection signal="pressed" from="Panel/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Panel/ajustes" to="." method="_on_ajustes_pressed"]
